--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,6 +36,9 @@ security:
         - { path: ^/user/modify/\d+/\d+, roles: ROLE_USER }
         - { path: ^/order, roles: ROLE_USER } 
 
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        
 when@test:
     security:
         password_hashers:
