--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,7 @@ security:
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/user/modify/\d+/\d+, roles: ROLE_USER }
         - { path: ^/order, roles: ROLE_USER } 
+        # - { path: ^/admin, roles: ROLE_USER } 
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
