--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,11 +31,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/user/modify/\d+/\d+, roles: ROLE_USER }
         - { path: ^/order, roles: ROLE_USER } 
-        # - { path: ^/admin, roles: ROLE_USER } 
+        - { path: ^/dev/admin, roles: ROLE_ADMIN } 
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
